sass/_landing.scss
.features-illustration {
    position: relative;
}

.feature-item {
    background-color: white;
    border-radius: $button-default-radius;
    box-shadow: 0 3px 12px -2px rgba(0, 0, 0, .08);
    margin: 10px;
    margin-bottom: 30px;
    padding: 30px 25px 25px;
    text-align: center;
    &__icon {
        margin: 0 auto;
        width: 45px;
        height: 45px;
    }
    &__title {
        color: $dark-blue;
        font-size: 1.6rem;
        margin-bottom: 0;
        margin-top: 20px;
        small {
            color: $green;
        }
    }
    &__description {
        font-size: 1.3rem;
        line-height: 1.3;
        margin-bottom: 0;
        margin-top: 10px;
    }
    &--dark {
        background: lighten($dark-blue, 2%);
        .feature-item__title {
            color: white;
        }
    }
}

.home-section {
    position: relative;
    &--customers {
        // padding: 50px 0 100px;
        position: relative;
        background-color: $dark-blue;
    }
    &--dark{
        background-color: $dark-blue;
    }
    &__divider {
        background: darken($lighter-gray, 5%);
        height: 1px;
        margin-top: 100px;
        margin-bottom: 100px;
        width: 100%;
    }
    &--features {
        background-color: #fafafa;
        padding: 120px 0 90px;
        border-top: 1px solid whitesmoke;
    }
    &__feature-items {
        margin: 50px 0;
    }
    &--intro {
        padding: 50px 0;
    }
    &__setup-steps {
        margin: 40px 0;
    }
}

.home-section-header {
    margin-bottom: 40px;
    margin-top: 80px;
    max-width: 100%;
    width: 600px;
    &--centered {
        margin: 0 auto;
        text-align: center;
    }
    &__primary-title {
        color: $dark-blue;
        font-family: $bold-font;
        font-weight: bold;
        font-size: 3rem;
        line-height: 1.2;
        margin: 0;

        .home-section--dark &{
            color: white;
        }
    }
    &__secondary-title {
        font-size: 1.8rem;
        font-weight: normal;
        line-height: 1.6;

        .home-section--dark &{
            color: #c4f0ff;
        }
    }
}

.home-section-footer {
    margin-top: 50px;
    text-align: center;
    &--features {
        margin-top: 90px;
    }
}

.customers-section{
    padding: 45px 0 75px;

    &__logos-wrapper{
        position: absolute;
        left: 50%;
        top: 0;
        height: 100%;

        &:before, &:after{
            content: "";
            position: absolute;
            z-index: 1;
            bottom: -4px;
            left: 0;
            pointer-events: none;
            background-size: contain;
            background-image: linear-gradient(to bottom, rgba(1,27,51, 0), rgba(1,27,51, 1) 90%);
            width: 100%;
            height: 4em;
        }

        &:before{
            top: 0;
            bottom: auto;
            background-image: linear-gradient(to top, rgba(1,27,51, 0), rgba(1,27,51, 1) 90%);
        }
    }

    &__logos{
        height: 500%;
        width: 100%;
        position: relative;
        background-image: url(../images/clients/clients.png);
        background-repeat: repeat-y;
        opacity: .24;
        animation: scroll-customers 250s infinite;
        -webkit-animation: scroll-customers 250s infinite;
    }
    // &__logo {
    //     box-sizing: border-box;
    //     -moz-box-sizing: border-box;
    //     display: inline-block;
    //     height: 94px;
    //     line-height: 90px;
    //     margin-bottom: 30px;
    //     padding: 30px;
    //     width: 32%;
    //     opacity: .4;
    //     cursor: pointer;
    // }
    // &__logo-img {
    //     height: 100%;
    //     object-fit: contain;
    //     object-position: center;
    //     width: 100%;
    // }
}

.setup-steps-container {
    margin-top: 30px;
}

.setup-step {
    position: relative;
    margin-bottom: 40px;
    margin-left: 20px;
    &::last-child {
        margin-bottom: 0;
    }
    &__number {
        left: -25px;
        position: absolute;
        top: 10px;
        -webkit-transform: translateY(-50%);
        transform: translateY(-50%);
        span {
            background: $green;
            border-radius: 6px;
            display: block;
            height: 3px;
            margin-bottom: 2px;
            width: 14px;
        }
    }
    &__title {
        font-size: 1.6rem;
        margin: 0;
    }
    &__message {
        font-size: 1.6rem;
        line-height: 1.6;
        margin-top: 5px;
    }
    &--list {
        margin-bottom: 12px;
    }
}

.slide {
    top: 50%;
    color: white;
    float: left;
    left: 0;
    margin: 0 auto;
    max-width: 90%;
    position: absolute;
    right: 0;
    transform: translateY(-50%);
    width: 850px;
    &--one,
    &--four {
        width: 550px;
    }
    &__image {
        background: #112E48;
        border-radius: 2px;
        box-shadow: 0px 14px 45px rgba(0, 0, 0, 0.18);
        height: 300px;
        mix-blend-mode: normal;
        opacity: 1;
        overflow: hidden;
        width: 95%;
        img {
            width: 100%;
        }
    }
    &__image--right {
        float: right;
    }
    &__icon {
        margin: 0;
        margin-bottom: 20px;
        margin-top: 40px;
    }
    &__primary-title {
        color: $green;
        font-size: 2.5rem;
        font-weight: normal;
        margin: 0;
    }
    &__secondary-title {
        color: white;
        font-size: 1.8rem;
        font-weight: normal;
        line-height: 1.3;
        margin: 10px 0;
    }
    &__footer {
        bottom: -50px;
        left: 0;
        margin: 50px auto 0;
        position: absolute;
        right: 0;
        text-align: center;
        width: 400px;
    }
    &__logo-box {
        background: $dark-blue;
        border-radius: 50%;
        box-shadow: 0px 6px 9px rgba(0, 0, 0, 0.1);
        height: 80px;
        left: 0;
        margin: 0 auto;
        position: absolute;
        right: 0;
        text-align: center;
        top: 200px;
        width: 80px;
        z-index: 10;
        img {
            margin-top: 25px;
            width: 30px;
        }
    }
}

